@@ -853,7 +853,7 @@ public class AddeImageSelection extends DataSelectionComponent {
             if (lines.equalsIgnoreCase(ALL)) {
                 lines = "" + (int) baseNumLines;
             }
-            int    numLines = new Integer(lines.trim()).intValue();
+            int    numLines = Integer.parseInt(lines.trim());
 
             String elems    = (toks.size() > 1)
                               ? "" + toks.get(1)
@@ -861,7 +861,7 @@ public class AddeImageSelection extends DataSelectionComponent {
             if (elems.equalsIgnoreCase(ALL)) {
                 elems = "" + baseNumElements;
             }
-            int numElements = new Integer(elems.trim()).intValue();
+            int numElements = Integer.parseInt(elems.trim());
             return new int[] { (int) Math.min(numLines, baseNumLines),
                                (int) Math.min(numElements, baseNumElements) };
         }
@@ -1178,8 +1178,8 @@ public class AddeImageSelection extends DataSelectionComponent {
             } else if (prop.equals(PROP_MAG)) {
                 String[] pair = getPair(value);
                 if (pair != null) {
-                    setMagSliders(new Integer(pair[0]).intValue(),
-                                  new Integer(pair[1]).intValue());
+                    setMagSliders(Integer.parseInt(pair[0]),
+                                  Integer.parseInt(pair[1]));
                 } else {
                     setMagSliders(DEFAULT_MAG, DEFAULT_MAG);
                 }
@@ -1267,9 +1267,9 @@ public class AddeImageSelection extends DataSelectionComponent {
             return "Band: " + band;
         }
         Hashtable bandToName =
-            (Hashtable) sensorToBandToName.get(new Integer(ad.getSensorID()));
+            (Hashtable) sensorToBandToName.get(Integer.valueOf(ad.getSensorID()));
         String  name        = null;
-        Integer bandInteger = new Integer(band);
+        Integer bandInteger = Integer.valueOf(band);
 
         if (bandToName != null) {
             name = (String) bandToName.get(bandInteger);
